src/runtime/tests/fixtures/function_chain/function_chain.error.expected
RUNTIME ERROR
Traceback: most recent call lowest
  0: File "./src/runtime/tests/test_programs/function_chain.nl", line: 27:18
    100.times(fn(x) {
    ^^^^^^^^^^^^^^^^^
TypeError: Tried to call Null type
